@@ -10,6 +10,7 @@ ST_cancelled = 4
 ST_discarded = 5
 ST_done      = 6
 ST_failed    = 7
+ST_fatal     = 8
 
 
 
